db save rent.js fix, added scrollbar messages

--- a/src/components/dashboard/home/home.scss
+++ b/src/components/dashboard/home/home.scss
@@ -29,6 +29,18 @@ main {
     // overflow: hidden;
     overflow: scroll;
   }
+  ::-webkit-scrollbar {
+    // -webkit-appearance: none;
+    width: 10px;
+  }
+  ::-webkit-scrollbar-corner {
+    background: rgba(0,0,0,0);
+  }
+  ::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: rgba(0,0,0,.5);
+    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
+  }
   #mining-op-tableHeader tr th {
     border-top: none;
   }
